update(logo): squishy logo placement and work margin fix

--- a/src/scss/partials/_home-feature.scss
+++ b/src/scss/partials/_home-feature.scss
@@ -3,8 +3,8 @@
   min-height: 100vh;
   overflow: hidden;
   font-family: 'noe-display-medium';
-  font-size: calc(25px + (64 - 25) * (100vw - 400px) / (1440 - 400));
-  line-height: 1;
+  font-size: calc(35px + (64 - 35) * (100vw - 400px) / (1440 - 400));
+  line-height: calc(2.5vw + 2.4vh);
   padding: calc(10px + (30 - 10) * (100vw - 400px) / (1440 - 400)) 0;
   box-sizing: border-box;
   position:relative;
@@ -24,9 +24,9 @@
   cursor: pointer;
   transition: .3s;
   white-space: nowrap;
-  padding: calc(5px + 1.8vw) 0;
+  padding: calc(5px + .6vw + 2.3vh) 0;
   background: white;
-  margin-top: calc(10px - 4vw);
+  margin-top: calc(10px - 3.2vw - 1vh);
   backface-visibility: hidden;
   will-change: transform, color, background;
   flex-shrink: 2;
