--- a/src/scss/partials/_maincontent.scss
+++ b/src/scss/partials/_maincontent.scss
@@ -542,18 +542,20 @@ main {
 					@include flexbox;
 					@include align-items(flex-start);
 				}
-				&.work-row-onethird-twothirds + .work-row-twothirds-onethird .work-row-inner {
-					@include align-items(flex-end);
-					margin-bottom: 50px;
-					@media (min-width: $bp-sm-min) {
-						margin-bottom: calc(15px + (100 - 14) * (100vw - 320px) / (1440 - 320));;
-					}
-				}
+				&.work-row-onethird-twothirds + .work-row-twothirds-onethird .work-row-inner,
 				&.work-row-twothirds-onethird + .work-row-onethird-twothirds .work-row-inner {
 					@include align-items(flex-end);
-					margin-bottom:50px;
+					margin-top: -50px;
 					@media (min-width: $bp-sm-min) {
-						margin-bottom: calc(15px + (100 - 14) * (100vw - 320px) / (1440 - 320));
+						margin-top: calc(-15px + (-100 + 15) * (100vw - 320px) / (1440 - 320));
+					}
+				}
+
+				&.work-row-twothirds-onethird .work-row-inner,
+				&.work-row-onethird-twothirds .work-row-inner {
+					margin-bottom: 50px;
+					@media (min-width: $bp-sm-min) {
+						margin-bottom: calc(15px + (100 - 15) * (100vw - 320px) / (1440 - 320));;
 					}
 				}
 			}
